--- a/css/variables.css
+++ b/css/variables.css
@@ -4,5 +4,6 @@
     --advice-card-color: hsl(217, 19%, 24%);
     --background-color: hsl(218, 23%, 16%);
     --text-alt-color: hsl(228, 45%, 44%);
+    --text-menu-color:hsl(0, 5%, 11%);
     --alt-background: hsl(0, 100%, 100%);
 }
